# wind

./: .clangd  .gitignore  CMakeLists.txt  CNAME  Makefile  TODO  build.sh  index.html  sum_even  test  test.asm
.github/: README.md
.github/workflows/: distribute.yml  release.yml
benchmarks/: benchmark.sh  test.c  test.cpp  test.rs  test.w
grammar/: libc.w  types.w  wind.0.w
raw_std/: _start.S  stack.c  stack.w
src/: CMakeLists.txt
src/core/includes/wind/backend/interface/: gas.h  ld.h
src/core/includes/wind/backend/writer/: writer.h
src/core/includes/wind/backend/writer/arch/: x86.h
src/core/includes/wind/backend/writer/common/: manage.h
src/core/includes/wind/backend/x86_64/: backend.h  expr_macros.h
src/core/includes/wind/bridge/: ast.h  ast_printer.h  flags.h  opt_flags.h
src/core/includes/wind/common/: debug.h
src/core/includes/wind/generation/: IR.h  backend.h  compiler.h  ir_printer.h  optimizer.h
src/core/includes/wind/hashing/: xxhash.h
src/core/includes/wind/isc/: isc.h
src/core/includes/wind/processing/: lexer.h  parser.h  token.h  utils.h
src/core/includes/wind/reporter/: lexer.h  parser.h
src/core/includes/wind/userface/: userf.h
src/core/wind/backend/interface/: gas.cpp  ld.cpp
src/core/wind/backend/writer/: writer.cpp
src/core/wind/backend/writer/arch/x86/: lme.cpp  solve.cpp
src/core/wind/backend/x86_64/: allocator.cpp  args_utils.cpp  backend.cpp  cond.cpp  expr.cpp  flow.cpp  func.cpp  ptr.cpp  state.cpp  struct.cpp  utils.cpp  vars.cpp
src/core/wind/bridge/ast/: ast.cpp  ast_printer.cpp
src/core/wind/generation/IR/: ir.cpp  ir_printer.cpp
src/core/wind/generation/backend/: asm_opt.cpp  backend.cpp  expr.cpp  gas.cpp  ld.cpp  security.cpp
src/core/wind/generation/compiler/: compiler.cpp
src/core/wind/generation/optimizer/: optimizer.cpp
src/core/wind/isc/: isc.cpp
src/core/wind/processing/: lexer.cpp  parser.cpp  utils.cpp
src/core/wind/reporter/: lexer.cpp  parser.cpp
src/core/wind/userface/: userf.cpp
src/includes/wind/bridge/: ast.h  ast_printer.h  opt_flags.h
src/includes/wind/generation/: IR.h  backend.h  compiler.h  gas.h  ir_printer.h  ld.h
src/includes/wind/processing/: lexer.h  parser.h  token.h  utils.h
src/includes/wind/reporter/: parser.h
src/includes/wind/userface/: userf.h
src/main/: proc.cpp
src/pkgs/curl/: curl.w  curl.wi
src/pkgs/link/: link.w  link.wi
src/pkgs/std/: std.w  std.wi
src/pkgs/std/io/: io.w  io.wi
src/pkgs/std/mem/: mem.w  mem.wi
src/pkgs/std/string/: string.w  string.wi
src/pyapi/: api.cpp
src/runtime/: handler.w  stack.w  start.w
src/std/: libc.w  libc.wi  types.w  types.wi  unix.wi
src/wind/: wind_gen.old  wind_proc.cpp
src/wind/bridge/ast/: ast.cpp  ast_printer.cpp
src/wind/generation/IR/: ir.cpp  ir_printer.cpp
src/wind/generation/backend/: asm_opt.cpp  backend.cpp  expr.cpp  gas.cpp  ld.cpp
src/wind/generation/compiler/: compiler.cpp
src/wind/generation/optimizer/: optimizer.cpp
src/wind/processing/: lexer.cpp  parser.cpp  utils.cpp
src/wind/reporter/: parser.cpp
src/wind/userface/: userf.cpp
testing/: run_tests.py
testing/benchmarks/: run_bench.py
testing/benchmarks/cases/cabala/: cabala.cpp  cabala.w  input.txt
testing/benchmarks/cases/it_hand/: input.txt  it_hand.cpp  it_hand.w
testing/benchmarks/cases/sum_even/: sum_even.cpp  sum_even.w
testing/dev/: readme.txt
testing/features/: run_tests.py
testing/features/suite/: __init__.py
testing/features/suite/binds/: __init__.py  ast.py  wapi.py
testing/features/tests/dev/: base.w  cabala.w  even.w  hand.w  t_expr.w
testing/features/tests/lexer/: __init__.py  literal.py
testing/tests/dev/: t_expr.w
utils/: distribute.sh  installer.sh
